# fpe

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  clippy.toml
.specify/memory/: constitution.md
benches/: solver_bench.rs
specs/001-poker-engine-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-poker-engine-cli/contracts/: cli-interface.md  json-schema.json
specs/002-mccfr-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mccfr-engine/checklists/: requirements.md
specs/002-mccfr-engine/contracts/: solver-api.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs  validation.rs
src/models/: action.rs  card.rs  game_state.rs  hand.rs  mod.rs  range.rs  strategy.rs
src/solver/: cfr.rs  equity.rs  evaluator.rs  info_set.rs  mccfr.rs  mod.rs  regret.rs
tests/integration/: cli_tests.rs  mod.rs  solver_tests.rs
tests/unit/: action_tests.rs  game_state_tests.rs  info_set_tests.rs  mccfr_tests.rs  mod.rs  output_tests.rs  range_tests.rs  strategy_tests.rs  validation_tests.rs
