[package]
name = "fpe"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code"]
description = "Poker GTO Strategy Engine with CLI Interface"

[dependencies]
# Core
pokers = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tabled = "0.15"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "solver_bench"
harness = false
